--- a/index.html
+++ b/index.html
@@ -116,11 +116,16 @@
     <h1>🎉 Happy 20 🎉</h1>
     <p>
       كل سنة وانتي طيبة  
-      أتمنى سنك الجديد يكون أخف  
+      أتمنى سنتك الجديده تكون أخف  
       وأهدى  
-      وفيه حاجات حلوة أكتر  
-      زيك كده  
+      وفيها حاجات حلوة أكتر  
+      زيك كده 
+      من ضمنهم انا
     </p>
+     <div class="card hidden" id="page4">
+        <p>
+          باي
+           </p>
     <p style="margin-top:15px; opacity:0.7;">
       — 1 / 1
     </p>
@@ -147,4 +152,5 @@
   </script>
 
 </body>
+
 </html>
